[fix]: [CCM-12766]: Azure Recommendations not showing up (#49006)
* [fix]: [CCM-12766]: Azure Recommendations not showing up

* [fix]: [CCM-12766]: Removing unused import